// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TableRow > should render with border 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class=" css-16ynu5g"
        data-testid="TableRow"
      />
    </tbody>
  </table>
</div>
`;

exports[`TableRow > should render with onClick callback 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-1kskd5s"
        data-testid="TableRow"
      />
    </tbody>
  </table>
</div>
`;

exports[`TableRow > should render without border 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class=" css-epvetr"
        data-testid="TableRow"
      />
    </tbody>
  </table>
</div>
`;

exports[`TableRow > should render without onClick callback 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class=" css-16ynu5g"
        data-testid="TableRow"
      />
    </tbody>
  </table>
</div>
`;
